infra/overlays/dev/mailhog/41-mailhog-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mailhog-ui.docker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailserver-service
                port:
                  number: 8091
